--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <style>
-    body{
-        background-color: rgba(253, 237, 239, 0.836);
+    body {
+        background-color: mintcream;
     }
     header {
-        background-color: rgb(253, 171, 185);
+        background-color: rgb(144, 238, 186);
         width: 100vw;
         height: 3rem;
         position: fixed;
@@ -20,134 +21,116 @@
         color: white;
         display: inline-block;
         text-align: center;
-        display: inline-block;
     }
+
     header h3 {
         display: inline-block;
-        width: 100;
-        margin: 2px;
-    }
-
-    .drop .link {
-        display: none;
-        width: 2rem;
-        margin-top: 2px;
-    }
-
-    .drop:hover .link {
-        display: initial; 
+        width: 20%;
     }
     header a {
         color: white;
     }
-    p {
-    color: black;
-    width: 15rem;
-    transition: 0s linear 0s;
-    text-align: center;
-    }
-
-    p:hover {
-    color: blue;
-    background-color: aliceblue;
-    }
-
-    .image-container{
-        width:50%;
-        height: auto;
-        margin: 2px;
-    }
-    .image-container img{
-        width: 100%;
-    }
 
     header a:hover {
-    color: rgb(255, 107, 131);
-    background-color: rgba(253, 237, 239, 0.836);
+    color: green;
+    background-color: mintcream;
     }
 
-    h1 {
-        margin-top: 2px;
-        width: 100%;
-        display: inline-block;
-        margin: 20px;
+    .left {
+        width:220px;
+        margin-left:30px;
+        float:left;
+        text-align: left;
     }
-
-    h2 {
-        margin-top: 2px;
-        width: 100%;
-        display: inline-block;
-        margin: 20px;
-    }
-
-    main p {
-        color: lavenderblush;
-    }
-
-    footer p {
-        width: 50%;
+    .right {
+        width:220px;
+        margin-left:30px;
+        float:right;
+        text-align: left;
     }
 
 </style>
+
 <body>
     <header>
-        <div class="drop">
-            <h3>link ▾</h3>
-            <div class="link">
-                <h3>
-                    <h3>
-                        <a href="4page.html">
-                            Page 2
-                        </a>
-                    </h3>
-                    <h3>
-                        <a href="5page.html">
-                            Page 3
-                        </a>
-                    </h3>
-                    <h3>
-                        <a href="6page.html">
-                            Page 4
-                        </a>
-                    </h3>
-                    <h3>
-                        <a href="7page.html">
-                            interests
-                        </a>
-                    </h3>
-                    <h3>
-                        <a href="2page.html">
-                            history
-                        </a>
-                    </h3>
-                    <h3>
-                        <a href="3page.html">
-                        Page 7
-                        </a>
-                    </h3>
-                </h3>
-            </div>
-        </div>
+        <h3>hello!</h3>
+        <h3>
+            <a href="miao22.github.io">
+             Home
+            </a>
+        </h3>
+        <h3>
+            <a href="miao22blah.github.io">
+             history
+            </a>
+        </h3>
+        <h3>hello!</h3>
     </header>
-
     <main>
-        <p>miao</p>
-        <p>miao</p>
+        <h3>hello</h3>
         <h1>
-        Jingjing
+        Page 2
         </h1>
         <h2>
-        Welcome to my home page! Click the links in the header to learn more about me~
+        interests
         </h2>
     </main>
-    <div class="image-container">
-        <img src="OLF88Y0.jpg"/>
-    </div>
-    </main>
-    <footer>
+    <h3>
+        ideal day
+    </h3>
+    <section>
         <p>
-            Photo from: <a href="https://www.freepik.com/free-photos-vectors/background">Background photo created by freepik - www.freepik.com</a>
+            My ideal day would be wake up as late as I want to and be able to see friends. I'd probably want to get my homework and violin practicing done too.
         </p>
-    </footer>
+    </section>
+    <h3>
+        skills
+    </h3>
+    <section>
+        <p>
+            <ol>
+                violin
+            </ol>
+            <ol>
+                math
+            </ol>
+            <ol>
+                science
+            </ol>
+            <ol>
+                art
+            </ol>
+            <ol>
+                piano
+            </ol>
+        </p>
+    </section>
+    <section class="left">
+        <h3>
+            top 5 favorite colors
+        </h3>
+        <p>
+            <ol>
+                <li>light pink</li>
+                <li>light blue</li>
+                <li>light purple</li>
+                <li>light torquoise</li>
+                <li>red</li>
+            </ol>
+        </p>
+    </section>
+    <section class="right">
+        <h3>favorite animals</h3>
+        <p>
+            <ol>
+                <li>cats</li>
+                <li>foxes</li>
+                <li>bunnies</li>
+                <li>dogs</li>
+                <li>fish</li>
+            </ol>
+        </p>
+    </section>
+    </main>
 </body>
 </html>
